--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section class="container">
         <div class="position-relative w-75 mx-auto animated slideInDown">
             <div class="sox">
-              <input id="srch" class="form-control border-0 rounded-pill w-100 py-2 ps-4 pe-5 mt-3" type="text" placeholder="Search City" style="font-weight: bold; font-family:monospace; text-align: center;">
+              <input id="srch" class="form-control border-0 rounded-pill w-100 py-2 ps-4 pe-5 mt-3" type="text" placeholder="Search City" style="font-weight: bold; font-family:monospace;">
               <button type="button"  onclick="searchData()" class="btn btn-primary rounded-pill py-1 px-4 position-absolute top-0 end-0 me-2 buttn" style="margin-top: 3.5px; font-weight: bold;">Search</button>
             </div>
         </div>
@@ -134,7 +134,7 @@
             </div>
     
     </section>
-
+<br>
    </div> 
 </body>
 <script>
